--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,14 @@
     "phpunit/phpunit": "^9.6",
     "yoast/phpunit-polyfills": "^1.1",
     "brain/monkey": "^2.6",
-    "mockery/mockery": "^1.6"
+    "mockery/mockery": "^1.6",
+    "squizlabs/php_codesniffer": "^3.7",
+    "wp-coding-standards/wpcs": "^3.0",
+    "phpcompatibility/phpcompatibility-wp": "^2.1",
+    "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+    "phpstan/phpstan": "^1.10",
+    "szepeviktor/phpstan-wordpress": "^1.3",
+    "php-stubs/woocommerce-stubs": "^8.0"
   },
   "autoload": {
     "psr-4": {
@@ -31,7 +38,10 @@
     "test": "phpunit",
     "test:unit": "phpunit --testsuite unit",
     "test:integration": "phpunit --testsuite integration",
-    "test:coverage": "phpunit --coverage-html coverage"
+    "test:coverage": "phpunit --coverage-html coverage",
+    "lint": "phpcs",
+    "lint:fix": "phpcbf",
+    "analyze": "phpstan analyse --memory-limit=1G"
   },
   "config": {
     "allow-plugins": {
