--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
     "phpstan/phpstan": "^1.10",
     "szepeviktor/phpstan-wordpress": "^1.3",
-    "php-stubs/woocommerce-stubs": "^8.0"
+    "php-stubs/woocommerce-stubs": "^8.0",
+    "wp-cli/i18n-command": "^2.6"
   },
   "autoload": {
     "psr-4": {
@@ -41,7 +42,8 @@
     "test:coverage": "phpunit --coverage-html coverage",
     "lint": "phpcs",
     "lint:fix": "phpcbf",
-    "analyze": "phpstan analyse --memory-limit=1G"
+    "analyze": "phpstan analyse --memory-limit=1G",
+    "make-pot": "wp i18n make-pot . languages/whatsapp-commerce-hub.pot --domain=whatsapp-commerce-hub --exclude=vendor,node_modules,tests,.git"
   },
   "config": {
     "allow-plugins": {
