--- a/phpstan.neon
+++ b/phpstan.neon
@@ -18,6 +18,9 @@ parameters:
 	scanFiles:
 		- vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
 		- vendor/php-stubs/woocommerce-stubs/woocommerce-stubs.php
+		- stubs/legacy-classes.php
+		- stubs/action-scheduler.php
+		- stubs/constants.php
 
 	# Enable broader analysis
 	polluteScopeWithLoopInitialAssignments: true
