Add memory limit note to PHPStan config

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,6 +9,7 @@ parameters:
 		- whatsapp-commerce-hub.php
 
 	# Parallel processing - disable to reduce memory usage
+	# Note: Run with --memory-limit=1G if analysis fails
 	parallel:
 		maximumNumberOfProcesses: 1
 
